[gd_scene load_steps=9 format=2]

[ext_resource path="res://styles/elements/Elements.png" type="Texture" id=1]
[ext_resource path="res://scripts/elements/search_button.gd" type="Script" id=2]
[ext_resource path="res://styles/icons/search.tres" type="Texture" id=3]
[ext_resource path="res://layout/elements/common/theme_overrider.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/elements/common/action_button.gd" type="Script" id=5]

[sub_resource type="StyleBoxTexture" id=1]
content_margin_left = 64.0
content_margin_right = 64.0
content_margin_top = 64.0
content_margin_bottom = 64.0
texture = ExtResource( 1 )
region_rect = Rect2( 0, 84, 256, 256 )
margin_left = 128.0
margin_right = 128.0
margin_top = 128.0
margin_bottom = 128.0
modulate_color = Color( 0.75, 0.75, 0.75, 1 )

[sub_resource type="StyleBoxTexture" id=2]
content_margin_left = 64.0
content_margin_right = 64.0
content_margin_top = 64.0
content_margin_bottom = 64.0
texture = ExtResource( 1 )
region_rect = Rect2( 0, 84, 256, 256 )
margin_left = 128.0
margin_right = 128.0
margin_top = 128.0
margin_bottom = 128.0
modulate_color = Color( 0.75, 0.75, 0.75, 1 )

[sub_resource type="StyleBoxTexture" id=3]
content_margin_left = 64.0
content_margin_right = 64.0
content_margin_top = 64.0
content_margin_bottom = 64.0
texture = ExtResource( 1 )
region_rect = Rect2( 0, 84, 256, 256 )
margin_left = 128.0
margin_right = 128.0
margin_top = 128.0
margin_bottom = 128.0
modulate_color = Color( 0.75, 0.75, 0.75, 1 )

[node name="button_search" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="search_box" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
margin_bottom = 172.0
color = Color( 0, 0, 0, 0.498039 )

[node name="margin_container" type="MarginContainer" parent="search_box"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -94.0
mouse_filter = 2

[node name="panel" type="Panel" parent="search_box/margin_container"]
margin_left = 20.0
margin_top = 20.0
margin_right = 700.0
margin_bottom = 74.0
mouse_filter = 2

[node name="line_edit" type="LineEdit" parent="search_box/margin_container"]
margin_left = 20.0
margin_top = 20.0
margin_right = 700.0
margin_bottom = 74.0
clear_button_enabled = true

[node name="button_search" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -256.0
margin_right = 256.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
icon = ExtResource( 3 )
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}
method_name = "_on_pressed"

[node name="theme_custom_class_override" parent="button_search" instance=ExtResource( 4 )]
theme_class = "FloatButton"
theme_stylebox_overrides = [ "normal", "hover", "pressed" ]
override_stylebox_color = true
